# WaveletTransformFramework

./: CMakeLists.txt  README
FileReaderLib/: CMakeLists.txt
FileReaderLib/src/: EmptyReader.cpp  EmptyReader.h  FFMpegCameraReader.cpp  FFMpegCameraReader.h  FFMpegVideoReader.cpp  FFMpegVideoReader.h  FileReader.h  FileReaderInterface.h  NoneReader.cpp  NoneReader.h  OpencvCameraReader.cpp  OpencvCameraReader.h  OpencvImageReader.cpp  OpencvImageReader.h  OpencvVideoReader.cpp  OpencvVideoReader.h
FileWriterLib/: CMakeLists.txt
FileWriterLib/src/: FileWriter.h  FileWriterInterface.h  OpencvImageWriter.cpp  OpencvImageWriter.h  OpencvVideoWriter.cpp  OpencvVideoWriter.h
ParseArgLib/: CMakeLists.txt
ParseArgLib/src/: CMakeLists.txt  ParseArg.cpp  ParseArg.h
WaveletTransformLib/: CMakeLists.txt
WaveletTransformLib/OpenclHelperLib/: CMakeLists.txt
WaveletTransformLib/OpenclHelperLib/src/: OclHelper.cpp  OclHelper.h
WaveletTransformLib/assets/kernels/: gpu.cl
WaveletTransformLib/src/: Debug.h  Wavelet.h  WaveletKernelGenerator.cpp  WaveletKernelGenerator.h  WaveletKernelGeneratorArg.cpp  WaveletKernelGeneratorArg.h  WaveletKernelGeneratorCpu.h  WaveletKernelGeneratorGpu.cpp  WaveletKernelGeneratorGpu.h  WaveletKernelGeneratorHelper.cpp  WaveletKernelGeneratorHelper.h  WaveletKernelGeneratorStep.cpp  WaveletKernelGeneratorStep.h  WaveletKernelGeneratorStepCpu.h  WaveletKernelGeneratorStepGpu.cpp  WaveletKernelGeneratorStepGpu.h  WaveletKernelGeneratorTypes.h  WaveletOpencl.cpp  WaveletOpencl.h  WaveletOpenclComb.cpp  WaveletOpenclComb.h  WaveletOpenclParam.cpp  WaveletOpenclParam.h  WaveletOpenclParamComb.cpp  WaveletOpenclParamComb.h  WaveletOpenclParamSep.cpp  WaveletOpenclParamSep.h  WaveletOpenclSep.cpp  WaveletOpenclSep.h  WaveletOpenmp.cpp  WaveletOpenmp.h  WaveletOpenmpParam.cpp  WaveletOpenmpParam.h  WaveletOpenmpParamSep.cpp  WaveletOpenmpParamSep.h  WaveletOpenmpSep.cpp  WaveletOpenmpSep.h  WaveletParam.cpp  WaveletParam.h
WindowRendererLib/: CMakeLists.txt
WindowRendererLib/src/: OpencvRenderer.cpp  OpencvRenderer.h  SdlRenderer.cpp  SdlRenderer.h  WindowRenderer.h  WindowRendererInterface.h
src/: MainConfig.cpp  MainConfig.h  main.cpp  main.h
